# doin-node

./: .gitignore  README.md  cross_machine_config.json  dragon_solo_config.json  experiment_stats_dragon.csv  launch_dragon.sh  olap_dragon.db-shm  olap_dragon.db-wal  optimization_stats.json  predictor_experiment_stats.csv  pyproject.toml  watch_optimization.sh
doin-data-dragon/: chain.db-shm  chain.db-wal  identity.json
examples/: cross_machine_delta.json  cross_machine_dragon.json  predictor_delta_node.json  predictor_delta_node_cnn.json  predictor_delta_node_tcn.json  predictor_delta_node_tft.json  predictor_dragon_node.json  predictor_dragon_node_cnn.json  predictor_dragon_node_cnn_direction_neat.json  predictor_dragon_node_cnn_direction_short_neat.json  predictor_dragon_node_tcn.json  predictor_dragon_node_tcn_neat.json  predictor_dragon_node_tft.json  predictor_dragon_node_tft_binary_neat.json  predictor_gamma_node_cnn_direction_neat.json  predictor_gamma_node_cnn_direction_short_neat.json  predictor_gamma_node_tcn_neat.json  predictor_gamma_node_tft_binary_neat.json  predictor_node_config.json  predictor_omega_node.json  predictor_omega_node_cnn.json  predictor_omega_node_cnn_direction_neat.json  predictor_omega_node_cnn_direction_short_neat.json  predictor_omega_node_tcn.json  predictor_omega_node_tcn_neat.json  predictor_omega_node_tft.json  predictor_omega_node_tft_binary_neat.json  predictor_single_node.json  quadratic_node_a.json  quadratic_node_b.json  quadratic_single_node.json
scripts/: run_benchmarks.sh  run_cross_machine_test.sh  run_single_test.sh  (+1 more)
(+120 files in other folders)
