[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doin-node"
version = "0.1.0"
description = "P2P node for the Decentralized Optimization Network (DON)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Harvey" },
]
dependencies = [
    "doin-core>=0.1.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
doin-node = "doin_node.cli:main"

[project.urls]
Homepage = "https://github.com/harveybc/doin-node"
Repository = "https://github.com/harveybc/doin-node"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
